--- a/calculatortatest/pom.xml
+++ b/calculatortatest/pom.xml
@@ -39,6 +39,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <suiteXmlFiles>
                         <suiteXmlFile>src\test\resources\suites\calculator-tests-testng.xml</suiteXmlFile>
                         <suiteXmlFile>src\test\resources\suites\timeout-tests-testng.xml</suiteXmlFile>
